Разные варианты логотипа компании. Интеграция photoswipe для открытия портфолио

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,26 +11,31 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 </head>
+
 <body>
 
   <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
   <header class="header">
     <div class="container">
       <div class="header-wrap">
-          <div class="header-logo">
-            <img src="img/header/Original.svg" alt="">
-            </div>
-            <!-- /.header-logo -->
-            <nav class="header-nav">
-              <ul class="list header-list">
-                <li class="header-list__item"><a href="#edge">О нас</a></li>
-                <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
-                <li class="header-list__item"><a href="#contacts">Контакты</a></li>
-              </ul>
-              <!-- /.list header-list -->
-              <button class="header-burger header-burger_alert"><span></span></button>
-            </nav>
-            <!-- /.header-nav -->
+        <div class="header-logo">
+          <img src="img/header/круглый белый внутри.png" alt="">
+        </div>
+        <!-- /.header-logo -->
+        <div class="header_title">
+          студия 3D визуализации интерьеров
+        </div>
+        <!-- /.header_title -->
+        <nav class="header-nav">
+          <ul class="list header-list">
+            <li class="header-list__item"><a href="#edge">О нас</a></li>
+            <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
+            <li class="header-list__item"><a href="#contacts">Контакты</a></li>
+          </ul>
+          <!-- /.list header-list -->
+          <button class="header-burger header-burger_alert"><span></span></button>
+        </nav>
+        <!-- /.header-nav -->
       </div>
       <!-- /.header-wrap -->
     </div>
@@ -107,9 +113,9 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Разные сценарии освещения</h2>
-          <p class="edge-card__text">В стоимость также входят разные сценарии освещения, если это допустимо для
-            данного интерьера. Обычно это проекты с дополнительным освещением,
-            различными подсветками.</p>
+            <p class="edge-card__text">В стоимость также входят разные сценарии освещения, если это допустимо для
+              данного интерьера. Обычно это проекты с дополнительным освещением,
+              различными подсветками.</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -159,7 +165,8 @@
     </div>
     <!-- /.container -->
     <div class="edge-main">
-      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ – 500 РУБЛЕЙ</p>
+      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ –
+        500 РУБЛЕЙ</p>
     </div>
     <!-- /.edge-card -->
   </section>
@@ -183,7 +190,8 @@
               <li class="steps-text__item">План расположения мебели с размерами</li>
               <li class="steps-text__item">Артикулы или фото мебели с указанием видов материала, цвета</li>
               <li class="steps-text__item">План расположения светильников, названия моделей</li>
-              <li class="steps-text__item">Информация о каких-либо дополнительных деталях, декоре, предпочтениях заказчика, особенностях интерьера</li>
+              <li class="steps-text__item">Информация о каких-либо дополнительных деталях, декоре, предпочтениях
+                заказчика, особенностях интерьера</li>
               <li class="steps-text__item">Фото похожих проектов в качестве примера по настроению и освещению</li>
               <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
                 отдельно картинки, как вам удобно и привычно.
@@ -236,34 +244,34 @@
   <div class="section portfolio" id="portfolio">
     <div class="container">
       <div class="portfolio-cards">
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/3.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/7.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
         </div>
-        <div class="portfolio-card">
+        <div class="portfolio-card portfolio-card_hover">
           <a href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
         </div>
       </div>
@@ -275,38 +283,40 @@
 
   <!-- РАЗДЕЛ С ПОЛЗУНКОМ ДО ПОСЛЕ -->
   <div class="section compare">
-      <div class="compare-wrap">
-        <div class="compare-block">
-          <div class="compare-image">
-            <div id="container2">
-              <img src="img/compare/Муляр спальня гостевая 1 правка сетка.jpg" alt="">
-              <img src="img/compare/Муляр спальня гостевая 1 правка.jpg" alt="">
-            </div>
+    <div class="compare-wrap">
+      <div class="compare-block">
+        <div class="compare-image">
+          <div id="container2">
+            <img src="img/compare/Муляр спальня гостевая 1 правка сетка.jpg" alt="">
+            <img src="img/compare/Муляр спальня гостевая 1 правка.jpg" alt="">
           </div>
-          <!-- /.compare-image -->
-          <div class="compare-text">
-            <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то информацию. Может полезную, а может не очень</p>
-          </div>
-          <!-- /.compare-text -->
         </div>
-        <!-- /.compare-block -->
-        <div class="compare-block">
-          <div class="compare-text">
-            <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то информацию. Может полезную, а может не очень</p>
-          </div>
-          <!-- /.compare-text -->
-          <div class="compare-image">
-            <div id="container1">
-              
-              <img src="img/compare/гостиная классика 1.jpg" alt="">
-              <img src="img/compare/гостиная классика 1н.jpg" alt="">
-            </div>
-          </div>
-          <!-- /.compare-image -->
+        <!-- /.compare-image -->
+        <div class="compare-text">
+          <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то информацию.
+            Может полезную, а может не очень</p>
         </div>
-        <!-- /.compare-block -->
+        <!-- /.compare-text -->
       </div>
-      <!-- /.compare-wrap -->
+      <!-- /.compare-block -->
+      <div class="compare-block">
+        <div class="compare-text">
+          <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то информацию.
+            Может полезную, а может не очень</p>
+        </div>
+        <!-- /.compare-text -->
+        <div class="compare-image">
+          <div id="container1">
+
+            <img src="img/compare/гостиная классика 1.jpg" alt="">
+            <img src="img/compare/гостиная классика 1н.jpg" alt="">
+          </div>
+        </div>
+        <!-- /.compare-image -->
+      </div>
+      <!-- /.compare-block -->
+    </div>
+    <!-- /.compare-wrap -->
   </div>
   <!-- /.section compare -->
 
@@ -315,7 +325,7 @@
     <div class="container">
       <div class="contacts-wrap">
         <div class="contacts__image">
-          <img src="img/contacts/9.jpg" alt="">
+          <img src="img/contacts/1.jpg" alt="">
         </div>
         <!-- /.contacts__image -->
         <div class="contacts-info">
@@ -360,13 +370,13 @@
           </div>
           <!-- /.contacts-social -->
           <!-- форма -->
-					<form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
-						<input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
-						<input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
-						<input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
-						<button type="submit" class="button contacts__button">Отправить</button>
-					</form>
-					<!-- /.form call__form -->
+          <form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
+            <input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
+            <input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
+            <input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
+            <button type="submit" class="button contacts__button">Отправить</button>
+          </form>
+          <!-- /.form call__form -->
         </div>
         <!-- /.contacts-info -->
       </div>
@@ -462,10 +472,10 @@
 
   <!-- ПОДВАЛ САЙТА -->
   <footer class="footer">
-      <div class="container">
-        <div class="footer-wrap">
+    <div class="container">
+      <div class="footer-wrap">
         <div class="footer-logo">
-          <img src="img/footer/White.svg" alt="">
+          <img src="img/footer/White.png" alt="">
         </div>
         <!-- /.footer-logo -->
         <div class="footer-social">
@@ -509,17 +519,17 @@
   <script src="js/follow-slider.js"></script>
   <script src="js/jquery.event.move.js"></script>
   <script src="js/jquery.twentytwenty.js"></script>
-<!-- endbuild -->
-<script>
-  $(document).ready(function () {
-    $(function(){
-  $("#container1").twentytwenty();
-  $("#container2").twentytwenty();
-});
-});
-</script>
+  <!-- endbuild -->
+  <script>
+    $(document).ready(function () {
+      $(function () {
+        $("#container1").twentytwenty();
+        $("#container2").twentytwenty();
+      });
+    });
+  </script>
 
-  <!-- <script src="https://static.kuula.io/embed.js" data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%" data-height="640px"></script> -->
+  
 </body>
 
 
