--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
 
   <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
   <header class="header">
-    <div class="container">
-      <div class="header-wrap">
-        <div class="header-logo">
-          <img src="img/header/круглый белый внутри.png" alt="">
+      <div class="container">
+        <div class="header-wrap">
+          <div class="header-logo">
+            <img src="img/header/круглый белый внутри.png" alt="">
+          </div>
+          <!-- /.header-logo -->
+          <div class="header_title">
+            студия 3D визуализации интерьеров
+          </div>
+          <!-- /.header_title -->
+          <nav class="header-nav">
+            <ul class="list header-list">
+              <li class="header-list__item"><a href="#edge">О нас</a></li>
+              <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
+              <li class="header-list__item"><a href="#contacts">Контакты</a></li>
+            </ul>
+            <!-- /.list header-list -->
+            <button class="header-burger header-burger_alert"><span></span></button>
+          </nav>
+          <!-- /.header-nav -->
         </div>
-        <!-- /.header-logo -->
-        <div class="header_title">
-          студия 3D визуализации интерьеров
-        </div>
-        <!-- /.header_title -->
-        <nav class="header-nav">
-          <ul class="list header-list">
-            <li class="header-list__item"><a href="#edge">О нас</a></li>
-            <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
-            <li class="header-list__item"><a href="#contacts">Контакты</a></li>
-          </ul>
-          <!-- /.list header-list -->
-          <button class="header-burger header-burger_alert"><span></span></button>
-        </nav>
-        <!-- /.header-nav -->
+        <!-- /.header-wrap -->
       </div>
-      <!-- /.header-wrap -->
-    </div>
-    <!-- /.container -->
+      <!-- /.container -->
   </header>
   <!-- /.header -->
 
@@ -469,6 +469,9 @@
     <!-- /.follow-slider -->
   </section>
   <!-- /.section follow -->
+  <script src="https://static.kuula.io/embed.js"
+  data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%"
+  data-height="640px"></script>
 
   <!-- ПОДВАЛ САЙТА -->
   <footer class="footer">
@@ -478,6 +481,10 @@
           <img src="img/footer/White.png" alt="">
         </div>
         <!-- /.footer-logo -->
+        <div class="header_title">
+          студия 3D визуализации интерьеров
+        </div>
+        <!-- /.header_title -->
         <div class="footer-social">
           <ul class="footer-social__list list">
             <li class="footer-social__item whatsapp">
