--- a/projects/1.html
+++ b/projects/1.html
@@ -14,6 +14,35 @@
 
 <body>
 
+  <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
+  <header class="header">
+    <div class="container">
+      <div class="header-wrap">
+        <div class="header-logo">
+          <img src="../img/header/круглый белый внутри.png" alt="">
+        </div>
+        <!-- /.header-logo -->
+        <div class="header_title">
+          студия 3D визуализации интерьеров
+        </div>
+        <!-- /.header_title -->
+        <nav class="header-nav">
+          <ul class="list header-list">
+            <li class="header-list__item"><a href="#edge">О нас</a></li>
+            <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
+            <li class="header-list__item"><a href="#contacts">Контакты</a></li>
+          </ul>
+          <!-- /.list header-list -->
+          <button class="header-burger header-burger_alert"><span></span></button>
+        </nav>
+        <!-- /.header-nav -->
+      </div>
+      <!-- /.header-wrap -->
+    </div>
+    <!-- /.container -->
+  </header>
+  <!-- /.header -->
+
   <div class="project__hero">
     <div class="project__hero__content">
       <span>Большая квартира для семьи</span>
