Кнопка вниз. КНопка прокрутки наверх. Медленная прокрутка через jquery

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="header-wrap">
           <div class="header-logo">
-            <img src="img/header/круглый белый внутри.png" alt="">
+            <!-- <img src="img/header/круглый белый внутри.png" alt=""> -->
           </div>
           <!-- /.header-logo -->
           <div class="header_title">
@@ -63,7 +63,7 @@
       <div class="hero-slider__item"><img src="img/hero/16.jpg" alt=""></div>
     </div>
     <!-- /.hero-slider -->
-    <div class="hero-arrow">
+    <div class="arrow hero-arrow">
       <a href="#edge">
         <img src="img/hero/down.png" alt="стрелка вниз">
       </a>
@@ -71,6 +71,12 @@
     <!-- /.hero-arrow -->
   </div>
   <!-- /.hero -->
+
+    <!-- КНОПКА ВВЕРХ В ПРАВОМ НЖНЕМ УГЛУ -->
+    <div class="up" id="up">
+      <img src="img/hero/down.png" alt="стрелка вниз">
+    </div>
+    <!-- /.hero-arrow -->
 
   <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
   <section class="section edge" id="edge">
@@ -477,8 +483,8 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-wrap">
-        <div class="footer-logo">
-          <img src="img/footer/White.png" alt="">
+        <div class="footer-logo" >
+          <!-- <img src="img/footer/White.png" alt=""> -->
         </div>
         <!-- /.footer-logo -->
         <div class="header_title">
@@ -526,6 +532,8 @@
   <script src="js/follow-slider.js"></script>
   <script src="js/jquery.event.move.js"></script>
   <script src="js/jquery.twentytwenty.js"></script>
+  <script src="js/arrow.js"></script>
+  <script src="js/up.js"></script>
   <!-- endbuild -->
   <script>
     $(document).ready(function () {
