Интеграция photoswipe. изменение разметки на figure для изображений. Файл photoswipe-portfolio-cards с функцией  инициализации галереи. Изменение фонового цвета галереи

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
   <section class="section edge" id="edge">
     <div class="container">
-      <h1 class="title edge__title">ЧТО ОТЛИЧАЕТ НАС ОТ ДРУГИХ СТУДИЙ</h1>
+      <h1 class="title edge__title">О ПРЕИМУЩЕСТВАХ РАБОТЫ С НАМИ</h1>
       <!-- /.title edge_title -->
       <div class="edge-cards">
         <div class="edge-card">
@@ -93,8 +93,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Нет ограничений по ракурсам</h2>
-            <p class="edge-card__text">Обычно получается 4-5 ракурсов на помещение, но если можно найти еще
-              интересный ракурс, вам не нужно платить за него дополнительно.</p>
+            <p class="edge-card__text">Обычно получается 4-5 ракурсов на помещение, но если можно найти больше интересных ракурсов, вам не нужно платить за них дополнительно</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -106,9 +105,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">3 правки</h2>
-            <p class="edge-card__text">В стоимость входят 3 правки (каждая правка – не более 20% от общей работы, если
-              нужно переделать интерьер в другом стиле, менять планировку, или большую часть
-              мебели, это рассчитывается отдельно)</p>
+            <p class="edge-card__text">В стоимость входят 3 правки (каждая правка – не более 20% от общей работы, если нужно переделать интерьер в другом стиле, менять планировку, или большую часть мебели, это рассчитывается отдельно)</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -120,9 +117,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Разные сценарии освещения</h2>
-            <p class="edge-card__text">В стоимость также входят разные сценарии освещения, если это допустимо для
-              данного интерьера. Обычно это проекты с дополнительным освещением,
-              различными подсветками.</p>
+            <p class="edge-card__text">В стоимость также входят разные сценарии освещения, если это допустимо для данного интерьера. Обычно это проекты с дополнительным освещением, различными подсветками</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -134,8 +129,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Не нужны ссылки на модели</h2>
-            <p class="edge-card__text">Вам не нужно подбирать 3D модели, мы сделаем это за вас. Корпусную мебель, любую
-              по вашему проекту, мы моделируем сами.</p>
+            <p class="edge-card__text">Вам не нужно подбирать 3D модели, мы сделаем это за вас. Корпусную мебель, любую по вашему проекту, мы моделируем сами</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -147,9 +141,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Не нужно подбирать декор</h2>
-            <p class="edge-card__text">Декор (наполнение открытых полок, кухонный декор, ванные принадлежности), если
-              нет определенных требований, мы также подберем сами в зависимости от стиля и
-              цветового решения проекта.</p>
+            <p class="edge-card__text">Декор (наполнение открытых полок, кухонный декор, ванные принадлежности), если нет определенных требований, мы также подберем сами в зависимости от стиля и цветового решения проекта</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -161,8 +153,7 @@
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
             <h2 class="edge-card__title">Сроки</h2>
-            <p class="edge-card__text">На одно помещение обычно уходит 2-4 дня в зависимости от объема и сложности
-              работы. Срок выполнения работы – время для подготовки первого эскиза</p>
+            <p class="edge-card__text">На одно помещение обычно уходит 2-4 дня в зависимости от объема и сложности работы. Срок выполнения работы – время для подготовки первого эскиза</p>
           </div>
           <!-- /.edge-card__content -->
         </div>
@@ -172,8 +163,7 @@
     </div>
     <!-- /.container -->
     <div class="edge-main">
-      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ –500
-        РУБЛЕЙ</p>
+      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ –500 РУБЛЕЙ</p>
     </div>
     <!-- /.edge-card -->
   </section>
@@ -193,8 +183,7 @@
             <ul class="steps-text">
               <li class="steps-text__item">Вам необходимо ознакомиться с требованиями к техническому заданию.
                 <br> Их можно найти ниже по сайту</li>
-              <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
-                отдельно картинки. Как вам удобно и привычно</li>
+              <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и отдельно картинки. Как вам удобно и привычно</li>
             </ul>
           </li>
           <li class="steps-list__item">
@@ -527,16 +516,16 @@
       <!-- /.follow-slider -->
     </section>
     <!-- /.section follow -->
-    <script src="https://static.kuula.io/embed.js"
-      data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%"
-      data-height="640px"></script>
+
+
+    <script src="https://static.kuula.io/embed.js" data-kuula="https://kuula.co/share/7YMX6?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%" data-height="640px"></script>
 
     <!-- ПОДВАЛ САЙТА -->
     <footer class="footer">
       <div class="container">
         <div class="footer-wrap">
-          <div class="footer-logo" id="logo-up">
-            <img src="img/footer/White.png" alt="">
+          <div class="footer-logo">
+              <a href="index.html"><img src="img/footer/White.png" alt=""></a>
           </div>
           <!-- /.footer-logo -->
           <div class="header_title">
